# prompt-generator-service

./: Dockerfile  Makefile  README.md  docker-compose-dev.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/core/: prompt_builder.py
app/schemas/: __init__.py  generate_prompt.py  request.py
app/service/: __init__.py  elasticsearch_client.py  prompt_service.py  rabbitmq_client.py  text_data_client.py  vectorizer_client.py
