[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = [""]
package-mode = false

[tool.black]
line-length = 79
target-version = [ "py310", "py311" ]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 79
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",    
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic", "__pycache__"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
tenacity = "^9.1.2"
aio_pika = "^9.5.5"
requests = "^2.31.0"
httpx = "^0.25.2"
prometheus_client = "^0.21.1"

[tool.poetry.group.test.dependencies]
black = "^24.10.0"
ruff = "^0.0.256"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.0"